# SDET_studying

./: README.md  pyproject.toml
tests/: test_smoke.py
